--- a/package.json
+++ b/package.json
@@ -11,9 +11,13 @@
   "dependencies": {
     "@material-tailwind/react": "2.1.8",
     "@multiversx/sdk-dapp": "^2.40.9",
+    "axios": "^1.7.7",
+    "axios-hooks": "^5.0.2",
+    "formik": "^2.4.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-router-dom": "^6.26.2"
+    "react-router-dom": "^6.26.2",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@types/react": "18.2.45",
